# AP1401-1-HW1

./: CMakeLists.txt  Dockerfile  README.md
resources/: fish.txt  inventory.txt
src/: book_inventory.cpp  main.cpp  regression.cpp  unit_test.cpp
